
	* configure.ac, data/fonts/dejavusans.ttf,
	src/gui/browserbox.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
	src/gui/truetypefont.cpp, src/gui/truetypefont.h, src/gui/window.cpp,
	src/main.cpp, src/Makefile.am, src/openglgraphics.cpp, tmw.cbp: Added
	support for True Type Fonts.
	* po/it.po, po/LINGUAS, po/pl.po: Added Polish translation and fixed
	Italian one.

2007-09-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* po/LINGUAS: Added German to the list of available languages.
	* po/de.po: Fixed two syntax errors preventing compilation.

2007-08-27  Matthias Hartmann  <hartmann.matthias@gmail.com>

	* po/de.po: Added german translation.

2007-08-27  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tmx.gz: Added test npcs.
	* src/openglgraphics.cpp, tmw.cbp: Fixed compilation with old OpenGL
	headers.
	* po/it.po: Updated italian translation.

2007-08-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/chat.h, src/gui/chat.cpp: Added "/admin" chat command for
	sending raw messages to the game server.
	* src/engine.cpp, src/resources/mapreader.cpp: Ported patch from 0.0,
	in order to support missing extensions and uncompressed maps.

2007-08-26  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/button.cpp: Fixed incorrect button dimensions, as they mess
	OpenGL display with rectangle textures.
	* src/graphics.cpp, src/openglgraphics.h, src/graphics.h,
	src/openglgraphics.cpp: Fixed fonts not being recolored by adding an
	explicit parameter to require it.

2007-08-25  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* configure.ac: Removed dependency on Guichan's OpenGL library.
	* src/Makefile.am, src/resources/sdlimageloader.cpp,
	src/resources/sdlimageloader.h, src/resources/openglsdlimageloader.h,
	src/resources/openglsdlimageloader.cpp, src/resources/imageloader.cpp,
	src/resources/imageloader.h, src/gui/gui.cpp, src/gui/gui.h: Replaced